# schulze-condorcet

./: .drone.yml  .gitignore  README.md  setup.cfg
.github/workflows/: tests.yml
schulze_condorcet/: __init__.py  io.py  schulze_condorcet.py  strength.py  types.py  util.py
tests/: test_schulze.py
