[metadata]
name = schulze-condorcet
version = 0.1.0
author =  Markus Oehme
author_email = 
maintainer =  CdE-Datenbank development team
maintainer_email = cdedb@lists.cde-ev.de
description = Python package to evaluate ballots using the Schulze Concordet method.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = schulze, condorcet, voting
url = 
project_urls =
    Bug Tracker = 
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
