[metadata]
name = schulze-condorcet
version = 1.0.2
author =  Markus Walter
author_email = dev@jonglieren-jena.de
maintainer =  CdE-Datenbank development team
maintainer_email = cdedb@lists.cde-ev.de
description = Python package to evaluate ballots using the Schulze Concordet method.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = schulze, condorcet, voting
url = https://github.com/cde-ev/schulze-condorcet
project_urls =
    Bug Tracker = https://github.com/cde-ev/schulze-condorcet/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Typing :: Typed

[options]
packages = schulze_condorcet
python_requires = >=3.8

[options.package_data]
schulze_condorcet = py.typed
